# folio.love

./: .gitignore  .gitmodules  .johnny-os.yaml  .ontos.toml  01_Vision_Document.md  02_Product_Requirements_Document.md  03_Technical_Architecture.md  04_Implementation_Roadmap.md  05_User_Stories.md  AGENTS.md  CHANGELOG.md  Folio_Tier4_ProposalReview_R1_Adversarial_Product.md  Folio_Tier4_ProposalReview_R1_Consolidated.md  LICENSE  MANIFEST.in  Ontos_Context_Map.md  PRD_PhaseB_B1_Adversarial_Review.md  PRD_PhaseB_B1_Adversarial_Review_R2.md  PRD_PhaseB_B1_Adversarial_Review_R3.md  PRD_PhaseB_B1_Adversarial_Review_R4.md  PRD_PhaseB_B1_Adversarial_Review_R5.md  PRD_PhaseB_B1_Alignment_Review_R3.md  PRD_PhaseB_B1_Alignment_Review_R5.md  PRD_PhaseB_B1_Peer_Review_R3.md  PRD_PhaseB_B2_Consolidation.md  README.md  __init__.py  __main__.py  analysis.py  cli.py  config.py  converter.py  diagram-extraction-briefing.html  diagram-extraction-checklist.md  diagram-research-consolidation-review.md  folio.example.yaml  frontmatter.py  images.py  markdown.py  obsidian-mermaid-transclusion-test.md  (+4 more)
.github/workflows/: publish.yml  tests.yml
.llm-dev/: config.yaml
docs/: framework-adoption.md  obsidian_queries.md
docs/architecture/: Folio_Ontology_Architecture.md  Folio_Ontology_Architecture_v2.md
docs/archive/: 03_Technical_Architecture_v1_reference.md
docs/guides/: agentic_setup.md  managed_mac_workflow.md
docs/internal/: diagram-research-consolidation-review.md  diagram-research-consolidation.md
docs/logs/: 2026-03-02_doc-cleanup-and-ontos-init-for-folio-love.md  2026-03-02_source-grounding-multi-pass-extraction-pipeline.md  2026-03-06_analysis-caching-hardening-b1-b3-g1-g4-s1-s2.md  2026-03-06_analysis-caching-spec-review.md  2026-03-06_frontmatter-v2-completeness.md  (+91 more)
folio/: __init__.py  analysis_docs.py  cli.py  config.py  context.py  converter.py  correspondence.py  defaults.py  digest.py  enrich.py  entity_import.py  entity_stubs.py  graph.py  ingest.py  links.py  lock.py  naming.py  provenance.py  search.py  synthesize.py  watch.py
folio/llm/: __init__.py  (+4 more)
frameworks/: 2026-04-15_folio-love-llm-dev-adoption.md
scripts/: bootstrap_macos.sh  llm-dev  resync-bundle.sh
templates/: AGENTS.folio.md
tests/: conftest.py  llm_mocks.py  test_analysis_cache.py  test_analysis_docs.py  test_cli_batch.py  test_cli_correspondence.py  test_cli_digest.py  test_cli_enrich_diagnose.py  test_cli_entities.py  test_cli_ingest.py  test_cli_search.py  test_cli_synthesize.py  test_cli_tier2.py  test_config.py  test_config_defaults.py  test_context.py  test_converter_integration.py  test_correspondence_ingest.py  test_diagram_analysis.py  test_diagram_cache.py  test_diagram_extraction.py  test_diagram_notes.py  test_diagram_rendering.py  test_diagram_retry.py  test_digest.py  test_docx_conversion.py  test_enrich.py  test_enrich_data.py  test_enrich_diagnose.py  test_enrich_integration.py  test_enrich_scale.py  test_entities.py  test_entity_import.py  test_entity_resolution.py  test_frontmatter.py  test_graph.py  test_graph_cli.py  test_grounding.py  test_image_strategy.py  test_images.py  (+26 more)
tools/: diagram_iterate.py
(+802 files in other folders)
