[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-love"
version = "0.1.0"
description = "Your consulting portfolio, searchable and AI-ready."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Johnny Oh"}
]
keywords = ["consulting", "portfolio", "pptx", "pdf", "markdown", "obsidian", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0",
    "markitdown>=0.1",
    "pdf2image>=1.16",
    "pdfplumber>=0.9",
    "Pillow>=9.0",
    "anthropic>=0.40",
    "pypdfium2==5.6.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/ohjonathan/folio.love"
Repository = "https://github.com/ohjonathan/folio.love"
Issues = "https://github.com/ohjonathan/folio.love/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "python-pptx>=0.6",
    "reportlab>=4.4",
    "pypdf>=6.8",
    "twine>=6.0",
]
llm = [
    "openai>=1.0",
    "google-genai>=1.0",
]

[project.scripts]
folio = "folio.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["folio*"]
